--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </p>
 
 <p style="text-align:justify; color: red;";>
-	🔥 <i>Our group has 2 ~ 3 PhD positions for Fall 2026 who are passionate about LLM agents, embodied reasoning, situated interactions, and related areas. If you are interested, feel free to email me your CV and a brief self-intro!</i>
+	🔥 <i>Our group has 2 ~ 3 PhD positions for Fall 2026 who are passionate about LLM agents, multimodal learning, situated interaction, and related areas. If you are interested, feel free to email me your CV and a brief self-intro!</i>
 </p>
 
 <h2> News </h2>
@@ -382,7 +382,7 @@
 </p>
 	<ul style="list-style-type:none">
 		<li>Area Chair: ACL Rolling Review (ARR), AACL (2025)</li>
-		<li>Program Committee Member: NeurIPS (2025-), ACL (2023-), EMNLP (2022-), AAAI (2026-), COLING (2020-)</li>
+		<li>Conference Reviewer: ICLR (2026-), NeurIPS (2025-), ACL (2023-), EMNLP (2022-), AAAI (2026-), COLING (2020-)</li>
 		<li>Journal Reviewer: IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Multimedia (TMM), ACM Transactions on Information Systems (TOIS) </li>
 	</ul>
 
