--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 	</li>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Probabilistic Optimality for Inference-time Scaling</h3> 
-		Youkang Wang, Jian Wang, Rubing Chen, Xiao-Yong Wei, and Qing Li.<br>
+		Youkang Wang*, <b>Jian Wang</b>*, Rubing Chen, Xiao-Yong Wei, and Qing Li.<br>
 		<i>arXiv:2506.22376, 2025</i> <br>
 		<a href="https://arxiv.org/abs/2506.22376">arXiv</a> | 
 		<a href="https://github.com/Albertwyk/OptScale">Github</a>
@@ -170,8 +170,7 @@
 		<h3>Benchmarking for Domain-Specific LLMs: A Case Study on Academia and Beyond</h3> 
 		Rubing Chen, Jiaxin Wu, <b>Jian Wang</b>, Xulu Zhang, Wenqi Fan, Chenghua Lin, Xiao-Yong Wei, Qing Li.<br>
 		<i>Findings of the Association for Computational Linguistics: EMNLP (EMNLP-Findings), 2025</i> <br>
-		<a href="https://arxiv.org/abs/2508.07353">arXiv</a> |
-		<a href="https://github.com/Anya-RB-Chen/COMP-COMP">Github</a>
+		<a href="https://arxiv.org/abs/2508.07353">arXiv</a>
 	    </p>
 	</li>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
