--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </p>
 
 <p style="text-align:justify; color: red;";>
-	🔥 <i>Our group has 2 ~ 3 PhD positions for Fall 2026 who are passionate about LLM agents, multimodal learning, situated interaction, and related areas. If you are interested, feel free to email me your CV and a brief self-intro!</i>
+	🔥 <i>Our group has 2 ~ 3 PhD positions for Fall 2026 who are passionate about LLM agents, embodied learning, multimodal interaction, and related areas. If you are interested, feel free to email me your CV and a brief self-intro!</i>
 </p>
 
 <h2> News </h2>
