--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
 		Yongqi Li, Lu Yang, <b>Jian Wang</b>, Runyang You, Wenjie Li, and Liqiang Nie. <br>
 		<i>The 33rd ACM International Conference on Multimedia (ACM MM), 2025.</i> <br>
 		<a href="https://arxiv.org/abs/2503.14189">arXiv</a> |
+		<a href="https://dl.acm.org/doi/10.1145/3746027.3755702">Paper</a> |
 		<a href="https://github.com/Lu-Yang666/MMsafe-PO">Github</a>
 	    </p>
 	</li>
