--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
 		<h3>Benchmarking for Domain-Specific LLMs: A Case Study on Academia and Beyond</h3> 
 		Rubing Chen, Jiaxin Wu, <b>Jian Wang</b>, Xulu Zhang, Wenqi Fan, Chenghua Lin, Xiao-Yong Wei, Qing Li.<br>
 		<i>Findings of the Association for Computational Linguistics: EMNLP (EMNLP-Findings), 2025</i> <br>
-		<a href="https://arxiv.org/abs/2508.07353">arXiv</a>
+		<a href="https://arxiv.org/abs/2508.07353">arXiv</a> |
+		<a href="https://aclanthology.org/2025.findings-emnlp.622/">Paper</a>
 	    </p>
 	</li>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
