--- a/index.html
+++ b/index.html
@@ -65,10 +65,7 @@
 <h2> News </h2>
 <p style="text-align:justify";>
 	<p style="text-align:justify";>
-		[Aug. 2025] 🔥 Got one paper accepted by <a href="https://2025.emnlp.org/" target="_blank">EMNLP 2025</a>.
-	</p>
-	<p style="text-align:justify";>
-		[July 2025] 🔥 Got one paper accepted by <a href="https://acmmm2025.org/" target="_blank">ACM MM 2025</a>.
+		[Nov. 2025] 🔥 Will be heading to Suzhou for <a href="https://2025.emnlp.org/" target="_blank">EMNLP 2025</a>.
 	</p>
 	<p style="text-align:justify";>
 		[Jun. 2025] 🔥 Our <a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL paper</a> was selected as an oral presentation (Top 8%)!
@@ -77,10 +74,10 @@
 		[May. 2025] &nbsp Got three papers accepted by <a href="https://2025.aclweb.org/" target="_blank">ACL 2025</a>! Welcome to have a chat in Vienna.
 	</p>
 	<p style="text-align:justify";>
-		[Feb. 2025] &nbsp Thrilled to be awarded the PolyU Postdoc Matching Fund.
+		[Feb. 2025] &nbsp Thrilled to be awarded the PolyU Postdoc Matching Fund!
 	</p>
 	<p style="text-align:justify";>
-		[Oct. 2024] &nbsp Will be working as a Postdoc at <a href="https://polyunlp.github.io/" target="_blank">PolyU NLP Group</a>.
+		[Nov. 2024] &nbsp Started to work as a Postdoc at <a href="https://polyunlp.github.io/" target="_blank">PolyU NLP Group</a>.
 	</p>
 	<p style="text-align:justify";>
 		[Sep. 2024] &nbsp Defended my PhD thesis. Huge thanks to my supervisor and committee members!
@@ -95,7 +92,7 @@
 		[Oct. 2023] &nbsp Got two papers accepted by <a href="https://2023.emnlp.org/" target="_blank">EMNLP 2023</a>! Will be heading to Singpore in December.
 	</p>
 	<p style="text-align:justify";>
-		[Jul. 2023] &nbsp Will be heading to Toronto for <a href="https://2023.aclweb.org/" target="_blank">ACL 2023</a>. The first time to attend an in-person academic conference during my PhD and to visit abroad during my life!
+		[Jul. 2023] &nbsp Will be heading to Toronto for <a href="https://2023.aclweb.org/" target="_blank">ACL 2023</a>. This is the first time to attend an in-person academic conference during my PhD and the first time to visit abroad during my life!
 	</p>
 	<!-- <p style="text-align:justify";>
 		[May 2023] &nbsp Got two papers accepted as Findings of ACL 2023!
@@ -111,7 +108,7 @@
 	My research interests are in natural language processing (NLP), large language models (LLMs), and AI more broadly. Recently, I have been focusing on the following directions:
 	<ul>
 		<li>
-			<b>Reasoning and Reliability of LLMs</b>: test-time scaling (<a href="https://arxiv.org/abs/2505.20522" target="_blank">arXiv'25a</a>, <a href="https://arxiv.org/abs/2506.22376" target="_blank">arXiv'25b</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), latent reasoning (<a href="https://arxiv.org/abs/2505.16782" target="_blank">arXiv'25c</a>), strategic reasoning, etc.
+			<b>Reasoning and Reliability of LLMs</b>: test-time scaling (<a href="https://arxiv.org/abs/2506.22376" target="_blank">AAAI'26</a>, <a href="https://arxiv.org/abs/2505.20522" target="_blank">arXiv'25a</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), latent reasoning (<a href="https://arxiv.org/abs/2505.16782" target="_blank">arXiv'25b</a>), strategic reasoning, etc.
 		</li>
 		<li>
 			<b>LLM-powered Agents</b>: agentic RL (<a href="https://arxiv.org/abs/2505.20732" target="_blank">arXiv'25</a>), task planning(<a href="https://arxiv.org/abs/2502.14276" target="_blank">ACL-Findings'25a</a>), tutoring agents (<a href="https://arxiv.org/abs/2502.13311" target="_blank">ACL-Findings'25b</a>), embodied agents, agentic memory, etc.
@@ -149,14 +146,6 @@
 	    </p>
 	</li>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
-		<h3>Probabilistic Optimality for Inference-time Scaling</h3> 
-		Youkang Wang*, <b>Jian Wang</b>*, Rubing Chen, Xiao-Yong Wei, and Qing Li.<br>
-		<i>arXiv:2506.22376, 2025</i> <br>
-		<a href="https://arxiv.org/abs/2506.22376">arXiv</a> | 
-		<a href="https://github.com/Albertwyk/OptScale">Github</a>
-	    </p>
-	</li>
-	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Scaling over Scaling: Exploring Test-Time Scaling Plateau in Large Reasoning Models</h3> 
 		<b>Jian Wang</b>, Boyan Zhu, Chak Tou Leong, Yongqi Li<sup>†</sup>, and Wenjie Li.<br>
 		<i>arXiv:2505.20522, 2025</i> <br>
@@ -164,21 +153,28 @@
 	    </p>
 	</li>
 </ul>
-<p> 2025 </p>
+<p> 2025 - Present </p>
 <ul>
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
+		<h3>OptScale: Probabilistic Optimality for Inference-time Scaling</h3> 
+		Youkang Wang, <b>Jian Wang</b>, Rubing Chen,and Xiao-Yong Wei.<br>
+		<i>AAAI Conference on Artificial Intelligence (AAAI), 2026.</i> <br>
+		<a href="https://arxiv.org/abs/2506.22376">arXiv</a> | 
+		<a href="https://github.com/Albertwyk/OptScale">Github</a>
+	    </p>
+	</li>
+	<!-- <li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Benchmarking for Domain-Specific LLMs: A Case Study on Academia and Beyond</h3> 
 		Rubing Chen, Jiaxin Wu, <b>Jian Wang</b>, Xulu Zhang, Wenqi Fan, Chenghua Lin, Xiao-Yong Wei, Qing Li.<br>
 		<i>Findings of the Association for Computational Linguistics: EMNLP (EMNLP-Findings), 2025</i> <br>
 		<a href="https://arxiv.org/abs/2508.07353">arXiv</a> |
 		<a href="https://aclanthology.org/2025.findings-emnlp.622/">Paper</a>
 	    </p>
-	</li>
+	</li> -->
 	<li><p style="margin-left: 0px; line-height: 140%; margin-top: 10px; margin-bottom: 10px;">
 		<h3>Towards Harmless Multimodal Assistants with Blind Preference Optimization</h3> 
 		Yongqi Li, Lu Yang, <b>Jian Wang</b>, Runyang You, Wenjie Li, and Liqiang Nie. <br>
 		<i>The 33rd ACM International Conference on Multimedia (ACM MM), 2025.</i> <br>
-		<a href="https://arxiv.org/abs/2503.14189">arXiv</a> |
 		<a href="https://dl.acm.org/doi/10.1145/3746027.3755702">Paper</a> |
 		<a href="https://github.com/Lu-Yang666/MMsafe-PO">Github</a>
 	    </p>
@@ -443,7 +439,7 @@
         </div>
 	<p>
 		<center>
-        <br> 2020-2025 &copy; Jian Wang | Last updated: Sept. 2025
+        <br> 2020-2025 &copy; Jian Wang | Last updated: Nov. 2025
 		</center>
 	</p>		
 </div>
