--- a/index.html
+++ b/index.html
@@ -348,25 +348,25 @@
 <ul style="list-style-type:none"> 
 <p style="line-height: 120%; margin-left: 0px; margin-top: 8pt; margin-bottom: 8pt;">
 	<li>
-		Postdoc Matching Fund (Awarded by PolyU)
+		Postdoc Matching Fund (Awarded by PolyU, 2025)
 	</li>
 	<li>
-		Research Postgraduate Student Innovation Award (Awarded by HKU)
+		Research Postgraduate Student Innovation Award (Awarded by HKU, 2022)
 	</li>
 	<li>
-		Third Prize of 2021 Language and Intelligence Challenge (Awarded by CCF, CIPS, and Baidu)
+		Third Prize of 2021 Language and Intelligence Challenge (Awarded by CCF-CIPS-Baidu, 2021)
 	</li>
 	<li>
-		Third Prize of Byte Cup 2018 IML Contest (Awarded by CAAI and ByteDance)
+		Third Prize of Byte Cup 2018 IML Contest (Awarded by CAAI-ByteDance, 2018)
 	</li>
 	<li>
-		Bronze Medal of 2016 HUAWEI Code Craft (Awarded by Huawei)
+		AAAI Student Scholarship (Awarded by AAAI, 2020)
 	</li>
 	<li>
-		AAAI 2020 Student Scholarship
+		National Scholarship (Awarded by Ministry of Education of the People's Republic of China, 2016)
 	</li>
 	<li>
-		National Scholarship
+		Merit Student of Sichuan (Awarded by Department of Education of Sichuan Province, 2013)
 	</li>
 </p>
 </ul>
