--- a/index.html
+++ b/index.html
@@ -360,13 +360,13 @@
 		Third Prize of Byte Cup 2018 IML Contest (Awarded by CAAI-ByteDance, 2018)
 	</li>
 	<li>
-		AAAI Student Scholarship (Awarded by AAAI, 2020)
+		AAAI Student Scholarship (2020)
 	</li>
 	<li>
-		National Scholarship (Awarded by Ministry of Education of the People's Republic of China, 2016)
+		National Scholarship (2016)
 	</li>
 	<li>
-		Merit Student of Sichuan (Awarded by Department of Education of Sichuan Province, 2013)
+		Merit Student of Sichuan Province (2013)
 	</li>
 </p>
 </ul>
@@ -378,7 +378,8 @@
     <strong> Academic Services </strong> <br> 
 </p>
 	<ul style="list-style-type:none">
-		<li>Area Chair: ACL Rolling Review (ARR), AACL (2025)</li>
+		<li>Area Chair: ACL Rolling Review (ARR), IJCNLP-AACL (2025)</li>
+		<li>Session Chair: ACL (2025), IJCNLP-AACL (2025)</li>
 		<li>Conference Reviewer: ICLR (2026-), NeurIPS (2025-), ACL (2023-), EMNLP (2022-), AAAI (2026-), COLING (2020-)</li>
 		<li>Journal Reviewer: IEEE Transactions on Neural Networks and Learning Systems (TNNLS), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Multimedia (TMM), ACM Transactions on Information Systems (TOIS) </li>
 	</ul>
