--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
     <li class="publication-item">
 		<img src="pic/pubs/jmlc20-cetm.png" alt="JMLC20-CETM" class="publication-thumbnail" onclick="openLightbox(this)">
 		<div class="publication-content">
-			<h3>CETM: Contextual Entity-Aware Topic Modeling with Topic-specific and Contextualized Embeddings</h3> 
+			<h3>Topic Discovery by Spectral Decomposition and Clustering with Coordinated Global and Local Contexts</h3> 
 			<p style="margin-left: 0px; line-height: 140%; margin-top: 0px; margin-bottom: 10px;">
 				<b>Jian Wang</b>, Kejing He, and Min Yang.<br> 
 				<i>International Journal of Machine Learning and Cybernetics (JMLC), 2020.</i> <br>
