--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </p>
 
 <p style="text-align:justify; color: red;";>
-	🔥 <i>Our group has 2 ~ 3 PhD positions for Fall 2026 who are passionate about LLM agents, embodied learning, multimodal interaction, and related areas. If you are interested, feel free to email me your CV and a brief self-intro!</i>
+	🔥 <i>Our group has 2 ~ 3 PhD positions for Fall 2026 who are passionate about LLM agents, agentic learning, embodied interaction, and relevant areas. If you are interested, feel free to email me your CV and a brief self-intro!</i>
 </p>
 
 <h2> News </h2>
@@ -111,7 +111,7 @@
 			<b>Reasoning and Reliability of LLMs</b>: test-time scaling (<a href="https://arxiv.org/abs/2506.22376" target="_blank">AAAI'26</a>, <a href="https://arxiv.org/abs/2505.20522" target="_blank">arXiv'25a</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), latent reasoning (<a href="https://arxiv.org/abs/2505.16782" target="_blank">arXiv'25b</a>), strategic reasoning, etc.
 		</li>
 		<li>
-			<b>LLM-powered Agents</b>: planning (<a href="https://arxiv.org/abs/2502.14276" target="_blank">ACL-Findings'25a</a>), tutoring (<a href="https://arxiv.org/abs/2502.13311" target="_blank">ACL-Findings'25b</a>), agentic RL (<a href="https://arxiv.org/abs/2505.20732" target="_blank">arXiv'25</a>), agentic memory, embodied agents, etc.
+			<b>LLM-powered Agents</b>: planning (<a href="https://arxiv.org/abs/2502.14276" target="_blank">ACL-Findings'25a</a>), tutoring (<a href="https://arxiv.org/abs/2502.13311" target="_blank">ACL-Findings'25b</a>), agentic RL (<a href="https://arxiv.org/abs/2505.20732" target="_blank">arXiv'25</a>), agent memory, embodied agents, etc.
 		</li>
 		<li> 
 			<b>Conversational AI</b>: proactive dialogue systems (<a href="https://ieeexplore.ieee.org/document/10042178" target="_blank">TNNLS'23</a>, <a href="https://dl.acm.org/doi/10.1145/3652598" target="_blank">TOIS'24</a>), dialogue consistency (<a href="https://aclanthology.org/2024.acl-long.219/" target="_blank">ACL'24</a>), personalized role-playing (<a href="https://aclanthology.org/2023.emnlp-main.72/" target="_blank">EMNLP'23</a>), etc.
