--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 </ul>
 <h4> 2025 - Present </h4>
 <ul class="publication-list">
-	<li class="publication-item">
+	<!-- <li class="publication-item">
 		<img src="pic/pubs/aaai26-optscale.png" alt="AAAI26-OptScale" class="publication-thumbnail" onclick="openLightbox(this)">
 		<div class="publication-content">
 			<h3>OptScale: Probabilistic Optimality for Inference-time Scaling</h3> 
@@ -178,7 +178,7 @@
 				<a href="https://github.com/Albertwyk/OptScale">Github</a>
 			</p>
 		</div>
-	</li>
+	</li> -->
 	<li class="publication-item">
 		<img src="pic/pubs/mm25-mm-safe-po.png" alt="MM25-MM-Safe-PO" class="publication-thumbnail" onclick="openLightbox(this)">
 		<div class="publication-content">
