--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 	My research interests are in natural language processing (NLP), large language models (LLMs), and AI more broadly. Recently, I have been focusing on the following directions:
 	<ul>
 		<li>
-			<b>Reasoning and Reliability of LLMs</b>: test-time scaling (<a href="https://arxiv.org/abs/2506.22376" target="_blank">AAAI'26</a>, <a href="https://arxiv.org/abs/2505.20522" target="_blank">arXiv'25a</a>), safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), latent reasoning (<a href="https://arxiv.org/abs/2505.16782" target="_blank">arXiv'25b</a>), strategic reasoning, etc.
+			<b>Reasoning and Reliability of LLMs</b>: strategic reasoning, safety alignment (<a href="https://arxiv.org/abs/2502.13946" target="_blank">ACL'25</a>), latent reasoning (<a href="https://arxiv.org/abs/2505.16782" target="_blank">arXiv'25b</a>),  test-time scaling (<a href="https://arxiv.org/abs/2505.20522" target="_blank">arXiv'25a</a>), etc.
 		</li>
 		<li>
 			<b>LLM-powered Agents</b>: planning (<a href="https://arxiv.org/abs/2502.14276" target="_blank">ACL-Findings'25a</a>), tutoring (<a href="https://arxiv.org/abs/2502.13311" target="_blank">ACL-Findings'25b</a>), agentic RL (<a href="https://arxiv.org/abs/2505.20732" target="_blank">arXiv'25</a>), agent memory, embodied agents, etc.
@@ -397,24 +397,22 @@
 </ul>
 
 
-<h2> Experiences </h2>
-<ul>
+<h2> Invited Talks </h2>
+<ul style="list-style-type:none"> 
+<p style="line-height: 120%; margin-left: 0px; margin-top: 8pt; margin-bottom: 8pt;">
 	<li> 
-		2024/02 - 2024/06: Visiting PhD student at <a href="https://umich.edu/" target="_blank">University of Michigan</a>
-		(Advisor: Prof. <a href="https://web.eecs.umich.edu/~chaijy/" target="_blank">	Joyce Chai</a>)
+		Stepwise Verification in LLM Agents: Planning, Tutoring, and Test-time Scaling. @SUSTech, Shenzhen. Dec. 2025
 	</li>
 	<li> 
-		2020/11 - 2021/08: Research assistant at <a href="https://www.polyu.edu.hk/" target="_blank">PolyU</a>
-		(Advisor: Prof. <a href="http://www4.comp.polyu.edu.hk/~cswjli/" target="_blank">Maggie Wenjie Li</a>)
+		Dialogue Tutoring Agents in Coding. @NICE Platform, Online. Jun. 2025
 	</li>
 	<li> 
-		2020/07 - 2020/10: Research intern at <a href="https://rul.ai/about-rulai/" target="_blank">Rulai Inc.</a>
-		(Advisor: Dr. <a href="https://www.linkedin.com/in/yizhang/" target="_blank">Yi Zhang</a>)
-    </li>
-    <li> 
-		2018/08 - 2019/09: Visiting graduate student at <a href="http://english.siat.cas.cn/" target="_blank">SIAT, Chinese Academy of Sciences</a>
-		(Advisor: Prof. <a href="https://minyang.me/" target="_blank">Min Yang</a>)
+		Knowledge-Enhanced Machine Conversation. @CUMT, Online. Sep. 2022
 	</li>
+	<li> 
+		Text Planning in Natural Language Generation. @Baidu AI, Online. Sep. 2022
+	</li>
+</p>
 </ul>
 
 
@@ -423,9 +421,6 @@
 <p style="line-height: 120%; margin-left: 0px; margin-top: 8pt; margin-bottom: 8pt;">
 	<li>
 		Postdoc Matching Fund (Awarded by PolyU, 2025)
-	</li>
-	<li>
-		Research Postgraduate Student Innovation Award (Awarded by HKU, 2022)
 	</li>
 	<li>
 		Third Prize of 2021 Language and Intelligence Challenge (Awarded by CCF-CIPS-Baidu, 2021)
@@ -514,7 +509,7 @@
         </div>
 	<p>
 		<center>
-        <br> 2020-2025 &copy; Jian Wang | Last updated: Nov. 2025
+        <br> 2020-2025 &copy; Jian Wang | Last updated: Dec. 2025
 		</center>
 	</p>		
 </div>
